# FiberHMM

./: .gitignore  LICENSE  README.md  accessible_probs.tsv  apply_model.py  apply_model_multiprocess.py  encode_context.py  export_posteriors.py  extract_tags.py  fiberhmm_utils.py  generate_probs.py  inaccessible_probs.tsv  pyproject.toml  train_model.py
Example datasets/output files/: dm6_example_fp.bed  dm6_example_model.pickle  dm6_example_training-reads.tsv
Example models/: dm6_model.pickle
FiberHMM/: apply_model.py  compare.py  encode_context.py  generate_emission-probs.py  prep_bed.py  readme.md  train_model.py
docs/: INSTALL.md  REFACTOR_AUDIT.md  haplotype_bigbed_rehydration_benchmark.md  reference.md
docs/multiassay/: README.md  corpus_manifest.tsv
examples/daf_preprocessing/: plot_deamination_rates.py  process_DddA_bam.py
fiberhmm/: __init__.py  _update_check.py
fiberhmm/cli/: __init__.py  _entry.py  apply.py  call.py  call_m5c.py  common.py  consensus_tfs.py  daf_encode.py  dedup.py  export_posteriors.py  extract_tags.py  generate_probs.py  model_selection.py  recall_config.py  recall_tfs.py  run.py  tag_m5c.py  train.py  utils.py
fiberhmm/core/: __init__.py  bam_reader.py  hmm.py  model_io.py  tag_access.py
fiberhmm/daf/: encoder.py  m5c.py
fiberhmm/inference/: __init__.py  bam_output.py  circular.py  engine.py  fingerprint.py  fused_stages.py  legacy_pipeline.py  mp_context.py  nrl_estimate.py  nuc_recaller.py  parallel.py  payload_read.py  posterior_records.py  read_filters.py  recall_tables.py  reference_mapping.py  region_pipeline.py  region_planning.py  region_types.py  region_workers.py  skip_reasons.py  stats.py  streaming_drain.py  streaming_pipeline.py  streaming_workers.py  tag_utils.py  tagging.py  tf_recaller.py  worker_results.py  worker_warmup.py
fiberhmm/io/: __init__.py  autosql.py  bam_header.py  bam_index.py  bed.py  ma_tags.py  path_status.py
fiberhmm/models/: __init__.py  cpg_nanopore.json  ddda_TF.json  ddda_nuc.json  dddb_nanopore.json  ecogii_pacbio.json  hia5_nanopore.json  hia5_pacbio.json
fiberhmm/models/legacy/: ddda_pacbio.json  hia5_pacbio_fp0.1x.json
fiberhmm/posteriors/: __init__.py  hdf5_backend.py  region_tsv.py  tsv_backend.py  writer.py
fiberhmm/probabilities/: __init__.py  context_counter.py  output_paths.py  stats.py  utils.py
models/: ddda_nuc.README.md  ddda_nuc_profile.json  hia5_nanopore.json  hia5_pacbio.json
models/legacy/: README.md
models/legacy/ddda_v3/: ddda_fn20_br05_fpx100.json  ddda_fn20_br10_fpx100.json  ddda_fn20_br15_fpx100.json  ddda_fn20_br20_fpx100.json  ddda_fn30_br05_fpx100.json  ddda_fn30_br10_fpx100.json  ddda_fn30_br15_fpx100.json  ddda_fn30_br20_fpx100.json  ddda_fn40_br05_fpx100.json  ddda_fn40_br10_fpx100.json  ddda_fn40_br15_fpx100.json  ddda_fn40_br20_fpx100.json  ddda_fn50_br10_fpx100.json  ddda_fn50_br15.json  ddda_fn50_br20_fpx100.json  ddda_fn60_br05_fpx100.json  ddda_fn60_br10_fpx100.json  ddda_fn60_br15_fpx100.json  ddda_fn60_br20_fpx100.json  sweep_results.json
tests/: conftest.py  test_apply_cli.py  test_bam_header.py  test_bam_index.py  test_bam_output.py  test_bam_reader.py  test_bed_io.py  test_call_cli.py  test_call_pipeline.py  test_circular_support.py  test_cli_common.py  test_cli_utils.py  test_consensus_tfs.py  test_context_counter.py  test_coordinate_frame.py  test_daf_chimera.py  test_daf_encode_cli.py  test_daf_encoder.py  test_daf_encoder_lifecycle.py  test_daf_iupac.py  test_dedup.py  test_export_posteriors_cli.py  test_extract_block_scores.py  test_extract_haplotype_fields.py  test_fingerprint.py  test_ft_integration.py  test_fused_stages.py  test_generate_probs.py  test_hmm.py  test_inference_engine.py  test_inference_parallel.py  test_m5c.py  test_mm_parser_vs_pysam.py  test_mode_equivalence.py  test_model_io.py  test_model_registry.py  test_model_selection.py  test_models.py  test_nrl_estimate.py  test_nuc_recaller.py  (+26 more)
tests/benchmarks/: bench_encoding.py  bench_hmm.py  bench_io_vs_compute.py  bench_memory.py  bench_pysam_threads.py  bench_scaling.py  bench_throughput.py  conftest.py
tools/: m5c_combine_genome.py  m5c_combine_tf_effect.py  m5c_genome.py  m5c_hg38_context_control.py  m5c_hg38_haplotype.py  m5c_read_hmm_validation.py  m5c_read_validation.py  m5c_tf_effect.py
tools/multiassay/: build_ecogii_supervised_emissions.py  dorado_basecall_guarded.sh  ecogii_cigar_to_modbam.py  normalize_modbam_tags.py  rasam_ipd_to_modbam.py  samosa_ccs_to_modbam.sh  samosa_precalled_to_modbam.py
