[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fiberhmm"
version = "2.10.0"
description = "Hidden Markov Model for calling chromatin footprints from fiber-seq and DAF-seq data"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "FiberHMM Authors"}
]
keywords = [
    "bioinformatics",
    "chromatin",
    "fiber-seq",
    "DAF-seq",
    "hidden-markov-model",
    "nucleosome",
    "footprinting",
    "epigenetics",
    "single-molecule"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.20",
    "scipy>=1.7",
    "pandas>=1.3",
    "pysam>=0.19",
    "tqdm>=4.60",
]

[project.optional-dependencies]
numba = ["numba>=0.55"]
plots = ["matplotlib>=3.5"]
posteriors = ["h5py>=3.0"]
all = [
    "numba>=0.55",
    "matplotlib>=3.5",
    "h5py>=3.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1",
]

[project.urls]
Homepage = "https://github.com/fiberseq/FiberHMM"
Documentation = "https://github.com/fiberseq/FiberHMM#readme"
Repository = "https://github.com/fiberseq/FiberHMM"
Issues = "https://github.com/fiberseq/FiberHMM/issues"

[project.scripts]
fiberhmm-apply = "fiberhmm.cli.apply:main"
fiberhmm-train = "fiberhmm.cli.train:main"
fiberhmm-extract = "fiberhmm.cli.extract_tags:main"
fiberhmm-probs = "fiberhmm.cli.generate_probs:main"
fiberhmm-utils = "fiberhmm.cli.utils:main"
fiberhmm-posteriors = "fiberhmm.cli.export_posteriors:main"
fiberhmm-daf-encode = "fiberhmm.cli.daf_encode:main"
fiberhmm-recall-tfs = "fiberhmm.cli.recall_tfs:main"
fiberhmm-consensus-tfs = "fiberhmm.cli.consensus_tfs:main"
fiberhmm-call = "fiberhmm.cli.call:main"
fiberhmm-run = "fiberhmm.cli.run:main"

# Top-level scripts kept for backward compatibility
[tool.setuptools]
py-modules = [
    "apply_model",
    "train_model",
    "generate_probs",
    "extract_tags",
    "fiberhmm_utils",
    "export_posteriors",
]

[tool.setuptools.packages.find]
include = ["fiberhmm*"]

[tool.setuptools.package-data]
"fiberhmm.models" = ["*.json", "legacy/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "bench_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "benchmark: performance benchmark (deselect with '-m \"not benchmark\"')",
    "slow: slow test (deselect with '-m \"not slow\"')",
]

[tool.coverage.run]
source = ["fiberhmm"]
omit = [
    "tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]
exclude = '''
/(
    \.git
    | \.venv
    | __pycache__
)/
'''

[tool.ruff]
line-length = 100
target-version = "py39"
exclude = [
    ".git",
    ".venv",
    "__pycache__",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
