[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fiberhmm"
version = "2.16.1"
description = "Hidden Markov Model for calling chromatin footprints from fiber-seq and DAF-seq data"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "FiberHMM Authors"}
]
keywords = [
    "bioinformatics",
    "chromatin",
    "fiber-seq",
    "DAF-seq",
    "hidden-markov-model",
    "nucleosome",
    "footprinting",
    "epigenetics",
    "single-molecule"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.20",
    "scipy>=1.7",
    "pandas>=1.3",
    "pysam>=0.19",
    "tqdm>=4.60",
]

[project.optional-dependencies]
numba = ["numba>=0.55"]
plots = ["matplotlib>=3.5"]
posteriors = ["h5py>=3.0"]
all = [
    "numba>=0.55",
    "matplotlib>=3.5",
    "h5py>=3.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1",
]

[project.urls]
Homepage = "https://github.com/fiberseq/FiberHMM"
Documentation = "https://github.com/fiberseq/FiberHMM#readme"
Repository = "https://github.com/fiberseq/FiberHMM"
Issues = "https://github.com/fiberseq/FiberHMM/issues"

[project.scripts]
fiberhmm-apply = "fiberhmm.cli._entry:apply_main"
fiberhmm-train = "fiberhmm.cli._entry:train_main"
fiberhmm-extract = "fiberhmm.cli._entry:extract_main"
fiberhmm-probs = "fiberhmm.cli._entry:probs_main"
fiberhmm-utils = "fiberhmm.cli._entry:utils_main"
fiberhmm-posteriors = "fiberhmm.cli._entry:posteriors_main"
fiberhmm-daf-encode = "fiberhmm.cli._entry:daf_encode_main"
fiberhmm-recall-tfs = "fiberhmm.cli._entry:recall_tfs_main"
fiberhmm-recall-nucs = "fiberhmm.cli._entry:recall_nucs_main"
fiberhmm-call = "fiberhmm.cli._entry:call_main"
fiberhmm-run = "fiberhmm.cli._entry:run_main"
fiberhmm-dedup = "fiberhmm.cli._entry:dedup_main"

# Top-level scripts kept for backward compatibility
[tool.setuptools]
py-modules = [
    "apply_model",
    "train_model",
    "generate_probs",
    "extract_tags",
    "fiberhmm_utils",
    "export_posteriors",
]

[tool.setuptools.packages.find]
include = ["fiberhmm*"]

[tool.setuptools.package-data]
"fiberhmm.models" = ["*.json", "legacy/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "bench_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short -m 'not benchmark'"
markers = [
    "benchmark: performance benchmark (run with '-m benchmark tests/benchmarks')",
    "slow: slow test (deselect with '-m \"not slow\"')",
]

[tool.coverage.run]
source = ["fiberhmm"]
omit = [
    "tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]
exclude = '''
/(
    \.git
    | \.venv
    | __pycache__
)/
'''

[tool.ruff]
line-length = 100
target-version = "py39"
exclude = [
    ".git",
    ".venv",
    "__pycache__",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
